// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectDebugFiles renders 1`] = `
<ProjectDebugSymbols
  location={
    Object {
      "query": Object {},
    }
  }
  params={
    Object {
      "orgId": "org",
      "projectId": "project",
    }
  }
>
  <SettingsPageHeading
    noTitleStyles={false}
    title="Debug Information Files"
  >
    <Wrapper>
      <div
        className="css-1r5ylk7-Wrapper e1kblvez2"
      >
        <Flex
          align="center"
        >
          <Base
            align="center"
            className="css-5ipae5"
          >
            <div
              className="css-5ipae5"
              is={null}
            >
              <Title
                styled={false}
              >
                <Base
                  className="css-1ky52ze-Title e1kblvez0"
                >
                  <div
                    className="css-1ky52ze-Title e1kblvez0"
                    is={null}
                  >
                    <HeaderTitle>
                      <h4
                        className="css-1w8ttcn-HeaderTitle e6lvex72"
                      >
                        Debug Information Files
                      </h4>
                    </HeaderTitle>
                  </div>
                </Base>
              </Title>
            </div>
          </Base>
        </Flex>
      </div>
    </Wrapper>
  </SettingsPageHeading>
  <TextBlock>
    <Component
      className="css-1geyb25-TextBlock ec8ep340"
    >
      <div
        className="css-1geyb25-TextBlock ec8ep340"
      >
        
            Debug information files are used to convert addresses and minified
            function names from native crash reports into function names and
            locations.
          
      </div>
    </Component>
  </TextBlock>
  <TextBlock>
    <Component
      className="css-1geyb25-TextBlock ec8ep340"
    >
      <div
        className="css-1geyb25-TextBlock ec8ep340"
      >
        This list contains all uploaded debug information files:
      </div>
    </Component>
  </TextBlock>
  <Panel>
    <Component
      className="css-10qfvek-Panel e1laxa7d0"
    >
      <div
        className="css-10qfvek-Panel e1laxa7d0"
      >
        <PanelHeader
          hasButtons={true}
        >
          <Component
            className="css-1m2bast-PanelHeader-getPadding e1p8v8nv0"
            hasButtons={true}
          >
            <Flex
              align="center"
              className="css-1m2bast-PanelHeader-getPadding e1p8v8nv0"
              justify="space-between"
            >
              <Base
                align="center"
                className="e1p8v8nv0 css-yowjp-PanelHeader-getPadding"
                justify="space-between"
              >
                <div
                  className="e1p8v8nv0 css-yowjp-PanelHeader-getPadding"
                  is={null}
                >
                  <Box
                    w={0.375}
                  >
                    <Base
                      className="css-cxbzjr"
                      w={0.375}
                    >
                      <div
                        className="css-cxbzjr"
                        is={null}
                      >
                        Debug ID
                      </div>
                    </Base>
                  </Box>
                  <Box
                    flex="1"
                  >
                    <Base
                      className="css-vti0ei"
                      flex="1"
                    >
                      <div
                        className="css-vti0ei"
                        is={null}
                      >
                        Name
                      </div>
                    </Base>
                  </Box>
                  <Box>
                    <Base
                      className="css-roynbj"
                    >
                      <div
                        className="css-roynbj"
                        is={null}
                      >
                        <withRouter(AsyncComponentSearchInput)
                          api={
                            Client {
                              "_chain": [Function],
                              "_wrapRequest": [Function],
                              "bulkUpdate": [Function],
                              "handleRequestError": [Function],
                              "hasProjectBeenRenamed": [Function],
                            }
                          }
                          className="search"
                          onError={[Function]}
                          onSuccess={[Function]}
                          placeholder="Search DIFs"
                          stateKey="project"
                          updateRoute={true}
                          url="/projects/org/project/"
                        >
                          <AsyncComponentSearchInput
                            api={
                              Client {
                                "_chain": [Function],
                                "_wrapRequest": [Function],
                                "bulkUpdate": [Function],
                                "handleRequestError": [Function],
                                "hasProjectBeenRenamed": [Function],
                              }
                            }
                            className="search"
                            debounceWait={200}
                            location={
                              Object {
                                "query": Object {},
                              }
                            }
                            onError={[Function]}
                            onSuccess={[Function]}
                            placeholder="Search DIFs"
                            router={
                              Object {
                                "createHref": [MockFunction],
                                "go": [MockFunction],
                                "goBack": [MockFunction],
                                "goForward": [MockFunction],
                                "isActive": [MockFunction],
                                "listen": [MockFunction],
                                "location": Object {
                                  "query": Object {},
                                },
                                "push": [MockFunction],
                                "replace": [MockFunction],
                                "setRouteLeaveHook": [MockFunction],
                              }
                            }
                            stateKey="project"
                            updateRoute={true}
                            url="/projects/org/project/"
                          >
                            <Form
                              onSubmit={[Function]}
                            >
                              <form
                                className="css-vfrmj7-Form et3a3ng1"
                                onSubmit={[Function]}
                              >
                                <Input
                                  className="search"
                                  onChange={[Function]}
                                  placeholder="Search DIFs"
                                  value=""
                                >
                                  <input
                                    className="search css-1b7nva7-Input-inputStyles e1xej46s0"
                                    onChange={[Function]}
                                    placeholder="Search DIFs"
                                    value=""
                                  />
                                </Input>
                              </form>
                            </Form>
                          </AsyncComponentSearchInput>
                        </withRouter(AsyncComponentSearchInput)>
                      </div>
                    </Base>
                  </Box>
                </div>
              </Base>
            </Flex>
          </Component>
        </PanelHeader>
        <PanelBody
          direction="column"
          disablePadding={true}
          flex={false}
        >
          <div
            className="css-a4ya23-textStyles"
          >
            <EmptyStateWarning
              small={false}
            >
              <EmptyStreamWrapper
                data-test-id="empty-state"
              >
                <div
                  className="css-pdv4gl-EmptyStreamWrapper ernlsnc0"
                  data-test-id="empty-state"
                >
                  <HeroIcon
                    size="54"
                    src="icon-circle-exclamation"
                  >
                    <Component
                      className="css-1j03cl-HeroIcon e1h7wyrq0"
                      size="54"
                      src="icon-circle-exclamation"
                    >
                      <InlineSvg
                        className="css-1j03cl-HeroIcon e1h7wyrq0"
                        size="54"
                        src="icon-circle-exclamation"
                      >
                        <StyledSvg
                          className="css-1j03cl-HeroIcon e1h7wyrq0"
                          height="54"
                          viewBox={Object {}}
                          width="54"
                        >
                          <svg
                            className="e1h7wyrq0 css-196iyqp-StyledSvg-HeroIcon e2idor0"
                            height="54"
                            viewBox={Object {}}
                            width="54"
                          >
                            <use
                              href="#test"
                              xlinkHref="#test"
                            />
                          </svg>
                        </StyledSvg>
                      </InlineSvg>
                    </Component>
                  </HeroIcon>
                  <p>
                    There are no debug symbols for this project.
                  </p>
                </div>
              </EmptyStreamWrapper>
            </EmptyStateWarning>
          </div>
        </PanelBody>
      </div>
    </Component>
  </Panel>
  <Pagination
    className="css-1yt0wm7-streamCss"
    onCursor={[Function]}
  />
</ProjectDebugSymbols>
`;

exports[`ProjectDebugFiles renders empty 1`] = `
<Fragment>
  <SettingsPageHeading
    noTitleStyles={false}
    title="Debug Information Files"
  />
  <TextBlock>
    
            Debug information files are used to convert addresses and minified
            function names from native crash reports into function names and
            locations.
          
  </TextBlock>
  <TextBlock>
    This list contains all uploaded debug information files:
  </TextBlock>
  <Panel>
    <PanelHeader
      hasButtons={true}
    >
      <Box
        w={0.375}
      >
        Debug ID
      </Box>
      <Box
        flex="1"
      >
        Name
      </Box>
      <Box>
        <withRouter(AsyncComponentSearchInput)
          api={
            Client {
              "_chain": [Function],
              "_wrapRequest": [Function],
              "bulkUpdate": [Function],
              "handleRequestError": [Function],
              "hasProjectBeenRenamed": [Function],
            }
          }
          className="search"
          onError={[Function]}
          onSuccess={[Function]}
          placeholder="Search DIFs"
          stateKey="project"
          updateRoute={true}
          url="/projects/org/project/"
        />
      </Box>
    </PanelHeader>
    <PanelBody
      direction="column"
      disablePadding={true}
      flex={false}
    >
      <EmptyStateWarning
        small={false}
      >
        <p>
          There are no debug symbols for this project.
        </p>
      </EmptyStateWarning>
    </PanelBody>
  </Panel>
  <Pagination
    className="css-1yt0wm7-streamCss"
    onCursor={[Function]}
  />
</Fragment>
`;
